discussion/kv_engine/179293/179293_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

serverless_test: Add --verbose / -v option

Can be specified multiple times to increase verbosity (similar to
memcached_testapp et al).

Change-Id: Ic5c4c28c50407e3329a00e4c7573e905af141d0e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-12 09:02:42.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-12 09:27:10.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20267/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:206:13: error: use of undeclared identifier "verbosity" [clang-diagnostic-error]
            verbosity++;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:220:28: error: use of undeclared identifier "verbosity" [clang-diagnostic-error]
    cb::test::startCluster(verbosity, backend);
                           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20267/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:206:13:
error: use of undeclared identifier "verbosity" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20267/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49250/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_serverless/main.cc(206): error C2065: "verbosity": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49250/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10071/ : FAILURE

Compile error at [2022-09-12T09:11:53.109Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/main.cc:196:43:
error: missing braces around initializer for ?std::__array_traits<option, 4>::_Type? {aka ?option [4]?} [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10071/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30635/ : FAILURE

Compile error at [2022-09-12T09:16:41.242Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_serverless/main.cc:206:13:
error: use of undeclared identifier "verbosity"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30635/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9974/ : FAILURE

Compile error at [2022-09-12T09:26:33.708Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/main.cc:206:13:
error: use of undeclared identifier "verbosity"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9974/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21592/ : FAILURE

Compile error at [2022-09-12T09:25:00.017Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/tests/testapp_serverless/main.cc:206:13:
error: use of undeclared identifier "verbosity"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21592/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22238/ : FAILURE

Compile error at [2022-09-12T09:12:17.402Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp_serverless/main.cc:196:43:
error: missing braces around initializer for ?std::__array_traits<option, 4>::_Type? {aka ?option [4]?} [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22238/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23351/ : FAILURE

Compile error at [2022-09-12T09:15:03.750Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/main.cc:206:13:
error: use of undeclared identifier "verbosity"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23351/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22597/ : FAILURE

Compile error at [2022-09-12T09:11:23.449Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/main.cc:196:43:
error: missing braces around initializer for ?std::__array_traits<option, 4>::_Type? {aka ?option [4]?} [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22597/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19489/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41397/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
